# ucp-twitter-bot

./: .gcloudignore  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  README.md  docker-compose.yml  gcloud_deploy.sh  main.py  pyproject.toml  requirements.txt  requirements_dev trans.txt  requirements_dev.txt  rinna.ipynb  sample.env  setup.cfg  tmp.ipynb  tox.ini  ucp_follower.py  ucp_get_usercontribs.py  ucp_reply.py  ucp_streaming_reply.py  ucp_test.py  ucp_tweet.py  ucp_tweet_liked.py
.devcontainer/: devcontainer.json  docker-compose.extend.yml  docker-compose.yml
tmp/: selenium.ipynb
ucp_twitter_bot/: twitter_authentication.py  ucp_favorite_tweet.py  ucp_follower.py  ucp_tweet.py
ucptwitbot/: constant.py  favorite_tweet.py  tweet.py  twitter_authentication.py  ucp_favorite_tweet.py  ucp_follower.py  ucp_tweet.py  utils.py
ucptwitbot/facebook/: post.py
ucptwitbot/ucp/: ucp_article_select.py
ucptwitbot/util/: create_image.py  huggingface.py
