[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucp_twitter_bot"
description = "Package for UcpBot"
license = {file = "LICENSE"}
readme = "README.md"
version = "0.0.3"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 1 - Alpha",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
  "tomli >= 2.0; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pytest",
  "pytest-cov",
]

[project.urls]
Source = "https://github.com/d0d0npa/ucp_bot"

[tool.isort]
profile = 'black'
src_paths = ['ucp_twitter_bot']
line_length = 88
lines_after_imports = 2
force_single_line = true
force_sort_within_sections = true

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = ["ucp_twitter_bot"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ucp_twitter_bot"]