[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucptwitbot"
description = "Package for UcpBot"
license = {file = "LICENSE"}
readme = "README.md"
version = "0.0.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Natural Language :: Japanese",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
  "tomli >= 2.0; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "pytest",
  "pytest-cov",
]

[project.urls]
Source = "https://github.com/d0d0npa/ucp-twitter-bot"

[tool.isort]
profile = 'black'
src_paths = ['ucptwitbot']
line_length = 88
lines_after_imports = 2
force_single_line = true
force_sort_within_sections = true

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = ["ucptwitbot"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ucptwitbot"]